@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.454 2005/11/03 02:14:44 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.455 2005/11/03 13:17:24 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  3 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  httpd now supports HTTPS and falls back to HTTP if not available
+  src/net/server/SecureXMLRPCServer.py:
+  SecureSocketServer is now threaded
 
   2 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/client/gliclient.py:
